feat: 修改 swagger model 註解
